snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2-sources.jar.sha512
111874f5aba8fb58b4d94ae62349da4305f2cba58ebfb10680bb0ff59b76804f8b720f0cb2904c16d38e6a13ff4c9bef0b1c4c2cd8607f90e4b33c5d78130418